fleet-gitops/50-gitlab/gitlab-manifests/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gitlab
  namespace: gitlab
  annotations:
    cert-manager.io/cluster-issuer: vault-issuer
    cert-manager.io/duration: "720h"
    cert-manager.io/renew-before: "168h"
spec:
  gatewayClassName: traefik
  listeners:
    - name: gitlab-web
      port: 8443
      protocol: HTTPS
      hostname: "gitlab.aegisgroup.ch"
      tls:
        mode: Terminate
        certificateRefs:
          - name: gitlab-aegisgroup-ch-tls
      allowedRoutes:
        namespaces:
          from: Same
    - name: kas-web
      port: 8443
      protocol: HTTPS
      hostname: "kas.aegisgroup.ch"
      tls:
        mode: Terminate
        certificateRefs:
          - name: kas-aegisgroup-ch-tls
      allowedRoutes:
        namespaces:
          from: Same
    - name: ssh
      port: 2222
      protocol: TCP
      allowedRoutes:
        namespaces:
          from: Same
